# toolbox

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: eml.rs  encoder.rs  main.rs  nut.rs  path_length_checker.rs  quick_install.rs
src/nut/: connect.rs  monitor.rs  nut.rs
src/quick_install/: chrome.rs  common.rs  discord.rs  firefox.rs  seven_zip.rs  spotify.rs  steam.rs  windirstat.rs
