[package]
name = "toolbox"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
iced = { version = "0.14.0", features = ["tokio", "sipper"] }
open = "5.3.3"
regex = "1.11.1"
reqwest = { version = "0.12.23", default-features = false, features = ["rustls-tls"] }
rfd = "0.17.2"
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
